c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/extra_credit/call_label_as_function.c
int main(void) {
    int x = 1;
    a:
    x = x + 1;
    a(); // can't call a label like a function
    return x;

}